# rust-book-examples

./: .gitignore
branches/src/: main.rs
collections/src/: main.rs
enums/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs
functions/src/: main.rs
generics_traits_lifetimes/src/: main.rs
guessing_game/src/: main.rs
lifetimes/src/: main.rs
ownership/src/: main.rs
rectangles/src/: main.rs
restaurant/src/: lib.rs
restaurant2/src/: front_of_house.rs
structs/src/: main.rs  user.rs
traits/src/: main.rs
traits2/: Cargo.toml
traits2/src/: main.rs
variables/src/: main.rs
