[package]
name = "error_handling"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# If you want to abort, rather than unwind, the stack, the following can
# be uncommented. Aborting is faster than unwinding, but makes it the
# operating system's responsibility to clean up memory from the process
#
# [profile.release]
# panic = 'abort'
